# LiveKit-Info-Bot

./: .dockerignore  .gitignore  BRANCH_PROTECTION.md  CI_CD_GUIDE.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  FINAL_SETUP.md  GITHUB_SETUP.md  README.md  README_CICD.md  SETUP_COMPLETE.md  SUMMARY.md  agent.py  app.py  build_embeddings.py  custom_llm.py  data.json  employee_embeddings.npy  livekit.toml  pyproject.toml
.github/workflows/: deploy.yml  manual-deploy.yml  status-check.yml
info-bot/: index.html  package-lock.json  package.json
info-bot/src/: App.tsx  index.css
