[project]
name = "livekit-info-bot"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-restx>=1.3.2",
    "google-genai>=1.55.0",
    "livekit-agents[groq,silero,turn-detector]~=1.3",
    "livekit-plugins-noise-cancellation~=0.2",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
]
